Implement Queue System

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /cmake-build-debug
 /.idea
+/assets/audio/JoJo's Rush Adventure_data
+/assets/audio/JoJo's Rush Adventure.aup
+/assets/audio/JoJo's Rush Adventure.mp4
